[gd_scene load_steps=34 format=3 uid="uid://c2ppwi7i418a6"]

[ext_resource type="Script" path="res://Scenes/Characters/Player/player.gd" id="1_7yjjl"]
[ext_resource type="PackedScene" uid="uid://006mb461a15" path="res://Util/logger.tscn" id="2_dawg5"]
[ext_resource type="PackedScene" uid="uid://dqqdyuy51hacy" path="res://Scenes/Characters/Player/Models/robot.tscn" id="2_mqj5b"]
[ext_resource type="FontFile" uid="uid://bextjb82kpapo" path="res://Graphics/Fonts/Transat Text Black.otf" id="3_22mn2"]
[ext_resource type="Texture2D" uid="uid://dwukxmjt3s65m" path="res://Graphics/Crosshairs/crosshair007-outline.png" id="3_yniyj"]
[ext_resource type="PackedScene" uid="uid://dnrhkjbwhffdl" path="res://Scenes/Weapons/Launcher/rocket_launcher.tscn" id="4_81pnj"]
[ext_resource type="Script" path="res://Scenes/Characters/ColliderBoneAttachment3D.gd" id="4_r4pv6"]
[ext_resource type="PackedScene" uid="uid://cw5lavd7k4wxo" path="res://Scenes/Weapons/Rifle/rifle.tscn" id="6_ak4qe"]
[ext_resource type="AudioStream" uid="uid://d1pfuwyuqsdvn" path="res://Sounds/Grapple fire.wav" id="9_yysj1"]
[ext_resource type="AudioStream" uid="uid://b3ulaxsa2vw74" path="res://Sounds/Pond 5 Originals/104818307-wind-synth-static-pitch-evolut.wav" id="10_1kjdc"]
[ext_resource type="AudioStream" uid="uid://bks5gpipox63j" path="res://Sounds/Effects/thrust.ogg" id="10_bh5eh"]
[ext_resource type="AudioStream" uid="uid://mbynuxyoap3m" path="res://Sounds/Effects/freeze.ogg" id="12_tgrls"]

[sub_resource type="SceneReplicationConfig" id="SceneReplicationConfig_8osja"]
properties/0/path = NodePath(".:in_grapple")
properties/0/spawn = true
properties/0/sync = true
properties/0/watch = false
properties/1/path = NodePath(".:grapple_targets")
properties/1/spawn = true
properties/1/sync = true
properties/1/watch = false
properties/2/path = NodePath(".:grapple_lengths")
properties/2/spawn = true
properties/2/sync = true
properties/2/watch = false
properties/3/path = NodePath(".:grapple_plane_normals")
properties/3/spawn = true
properties/3/sync = true
properties/3/watch = false
properties/4/path = NodePath(".:grapple_plane_points")
properties/4/spawn = true
properties/4/sync = true
properties/4/watch = false
properties/5/path = NodePath(".:wall_run_count")
properties/5/spawn = true
properties/5/sync = true
properties/5/watch = false
properties/6/path = NodePath(".:wall_run_direction")
properties/6/spawn = true
properties/6/sync = true
properties/6/watch = false
properties/7/path = NodePath(".:motion")
properties/7/spawn = true
properties/7/sync = true
properties/7/watch = false
properties/8/path = NodePath(".:head_motion")
properties/8/spawn = true
properties/8/sync = true
properties/8/watch = false
properties/9/path = NodePath(".:sync_position")
properties/9/spawn = true
properties/9/sync = true
properties/9/watch = false
properties/10/path = NodePath(".:sync_rotation")
properties/10/spawn = true
properties/10/sync = true
properties/10/watch = false
properties/11/path = NodePath(".:external_impulse")
properties/11/spawn = true
properties/11/sync = true
properties/11/watch = false
properties/12/path = NodePath(".:health")
properties/12/spawn = true
properties/12/sync = true
properties/12/watch = false
properties/13/path = NodePath(".:in_freeze")
properties/13/spawn = true
properties/13/sync = true
properties/13/watch = false
properties/14/path = NodePath(".:frozen_velocity")
properties/14/spawn = true
properties/14/sync = true
properties/14/watch = false
properties/15/path = NodePath(".:current_weapon")
properties/15/spawn = true
properties/15/sync = true
properties/15/watch = false

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_lmmnf"]
bg_color = Color(1, 0, 0.2, 1)

[sub_resource type="Theme" id="Theme_eojxe"]
default_font = ExtResource("3_22mn2")
default_font_size = 24
Label/fonts/font = ExtResource("3_22mn2")

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_1m1xh"]
bg_color = Color(0.517647, 0.603922, 0.756863, 0.501961)
corner_radius_top_left = 8
corner_radius_top_right = 8
corner_radius_bottom_right = 8
corner_radius_bottom_left = 8

[sub_resource type="Animation" id="Animation_od83u"]
resource_name = "HurtLeft"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("LeftDamage:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0.345098), Color(1, 1, 1, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("LeftDamage:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [true, false]
}

[sub_resource type="Animation" id="Animation_usf7d"]
resource_name = "RightDamage"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("RightDamage:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0.345098), Color(1, 1, 1, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("RightDamage:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [true, false]
}

[sub_resource type="Animation" id="Animation_uilrm"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("LeftDamage:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 0.345098)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("RightDamage:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 0.345098)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("RightDamage:visible")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("LeftDamage:visible")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_gg0q5"]
_data = {
"HurtLeft": SubResource("Animation_od83u"),
"HurtRight": SubResource("Animation_usf7d"),
"RESET": SubResource("Animation_uilrm")
}

[sub_resource type="SphereMesh" id="SphereMesh_60utp"]

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_3ln77"]
animation = &"Falling"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_as5y8"]
animation = &"FallingBack"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_5fy6i"]
animation = &"Swing"

[sub_resource type="AnimationNodeBlendSpace2D" id="AnimationNodeBlendSpace2D_7kew5"]
blend_point_0/node = SubResource("AnimationNodeAnimation_3ln77")
blend_point_0/pos = Vector2(1, 0)
blend_point_1/node = SubResource("AnimationNodeAnimation_as5y8")
blend_point_1/pos = Vector2(-1, 0)
blend_point_2/node = SubResource("AnimationNodeAnimation_5fy6i")
blend_point_2/pos = Vector2(0, 1)
x_label = "fall_direction"
y_label = "grapple"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_a5eyk"]
animation = &"Idle"

[sub_resource type="AnimationNodeBlend2" id="AnimationNodeBlend2_mghh1"]

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_v7tev"]
animation = &"Run"

[sub_resource type="AnimationNodeBlend2" id="AnimationNodeBlend2_vwei2"]

[sub_resource type="AnimationNodeBlendTree" id="AnimationNodeBlendTree_erxgy"]
graph_offset = Vector2(100.126, -87.9459)
nodes/FallSwingSpace/node = SubResource("AnimationNodeBlendSpace2D_7kew5")
nodes/FallSwingSpace/position = Vector2(880, 120)
nodes/Idle/node = SubResource("AnimationNodeAnimation_a5eyk")
nodes/Idle/position = Vector2(600, -80)
nodes/InAirBlend/node = SubResource("AnimationNodeBlend2_mghh1")
nodes/InAirBlend/position = Vector2(1120, -60)
nodes/Run/node = SubResource("AnimationNodeAnimation_v7tev")
nodes/Run/position = Vector2(600, 60)
nodes/RunBlend/node = SubResource("AnimationNodeBlend2_vwei2")
nodes/RunBlend/position = Vector2(880, -80)
nodes/output/position = Vector2(1380, -20)
node_connections = [&"output", 0, &"InAirBlend", &"InAirBlend", 0, &"RunBlend", &"InAirBlend", 1, &"FallSwingSpace", &"RunBlend", 0, &"Idle", &"RunBlend", 1, &"Run"]

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_6m3mm"]

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_81u2g"]
albedo_color = Color(0.352941, 0.513726, 0.815686, 1)

[sub_resource type="CylinderMesh" id="CylinderMesh_t43tk"]
top_radius = 0.01
bottom_radius = 0.01
height = 1.0
radial_segments = 6
rings = 2

[node name="Player" type="CharacterBody3D"]
collision_mask = 194
script = ExtResource("1_7yjjl")

[node name="MultiplayerSynchronizer" type="MultiplayerSynchronizer" parent="."]
unique_name_in_owner = true
replication_config = SubResource("SceneReplicationConfig_8osja")
visibility_update_mode = 2
public_visibility = false

[node name="Logger" parent="." instance=ExtResource("2_dawg5")]
unique_name_in_owner = true
label = "Player"

[node name="NameLabel" type="Label3D" parent="."]
unique_name_in_owner = true
transform = Transform3D(-1, 0, -8.74228e-08, 0, 1, 0, 8.74228e-08, 0, -1, 0, 2.23049, 0)
billboard = 1
text = "anonymous"
font_size = 48

[node name="UI" type="CanvasLayer" parent="."]
unique_name_in_owner = true

[node name="CenterContainer" type="CenterContainer" parent="UI"]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 4

[node name="Crosshair" type="Sprite2D" parent="UI/CenterContainer"]
unique_name_in_owner = true
texture = ExtResource("3_yniyj")

[node name="LeftDamage" type="Panel" parent="UI"]
unique_name_in_owner = true
modulate = Color(1, 1, 1, 0.345098)
anchors_preset = 9
anchor_bottom = 1.0
offset_right = 300.0
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_lmmnf")

[node name="RightDamage" type="Panel" parent="UI"]
unique_name_in_owner = true
modulate = Color(1, 1, 1, 0.345098)
anchors_preset = 11
anchor_left = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -300.0
grow_horizontal = 0
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_lmmnf")

[node name="Panel" type="Panel" parent="UI"]
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_left = 4.0
offset_top = -140.0
offset_right = 204.0
offset_bottom = -4.0
grow_vertical = 0
theme = SubResource("Theme_eojxe")
theme_override_styles/panel = SubResource("StyleBoxFlat_1m1xh")

[node name="MarginContainer" type="MarginContainer" parent="UI/Panel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 8
theme_override_constants/margin_top = 8
theme_override_constants/margin_right = 8
theme_override_constants/margin_bottom = 8

[node name="VBoxContainer" type="VBoxContainer" parent="UI/Panel/MarginContainer"]
layout_mode = 2

[node name="Health" type="HBoxContainer" parent="UI/Panel/MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="UI/Panel/MarginContainer/VBoxContainer/Health"]
custom_minimum_size = Vector2(120, 0)
layout_mode = 2
text = "HEALTH"

[node name="HealthValue" type="Label" parent="UI/Panel/MarginContainer/VBoxContainer/Health"]
unique_name_in_owner = true
layout_mode = 2
text = "100
"

[node name="Ammo" type="HBoxContainer" parent="UI/Panel/MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="UI/Panel/MarginContainer/VBoxContainer/Ammo"]
custom_minimum_size = Vector2(120, 0)
layout_mode = 2
text = "AMMO"

[node name="AmmoValue" type="Label" parent="UI/Panel/MarginContainer/VBoxContainer/Ammo"]
unique_name_in_owner = true
layout_mode = 2
text = "30"

[node name="Speed" type="HBoxContainer" parent="UI/Panel/MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="UI/Panel/MarginContainer/VBoxContainer/Speed"]
custom_minimum_size = Vector2(120, 0)
layout_mode = 2
text = "SPEED"

[node name="SpeedValue" type="Label" parent="UI/Panel/MarginContainer/VBoxContainer/Speed"]
unique_name_in_owner = true
layout_mode = 2
text = "25"

[node name="Thrusts" type="HBoxContainer" parent="UI/Panel/MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="UI/Panel/MarginContainer/VBoxContainer/Thrusts"]
custom_minimum_size = Vector2(120, 0)
layout_mode = 2
text = "THRUST"

[node name="ThrustValue" type="Label" parent="UI/Panel/MarginContainer/VBoxContainer/Thrusts"]
unique_name_in_owner = true
layout_mode = 2
text = "25"

[node name="UIAnimationPlayer" type="AnimationPlayer" parent="UI"]
unique_name_in_owner = true
libraries = {
"": SubResource("AnimationLibrary_gg0q5")
}

[node name="ViewContainer" type="Node3D" parent="."]
unique_name_in_owner = true
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.90273, -0.287068)

[node name="Camera3d" type="Camera3D" parent="ViewContainer"]
unique_name_in_owner = true
fov = 80.0

[node name="FiringCast" type="RayCast3D" parent="ViewContainer/Camera3d"]
unique_name_in_owner = true
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, -0.2)
target_position = Vector3(0, 0, -150)
collision_mask = 192

[node name="GrappleCast" type="RayCast3D" parent="ViewContainer/Camera3d"]
unique_name_in_owner = true
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, -0.2)
target_position = Vector3(0, 0, -150)
collision_mask = 6

[node name="GrappleCheckCast" type="RayCast3D" parent="ViewContainer"]
unique_name_in_owner = true
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, -0.2)
enabled = false
target_position = Vector3(0, 0, -150)
collision_mask = 4
debug_shape_custom_color = Color(0.937255, 0.168627, 0.52549, 1)
debug_shape_thickness = 5

[node name="CurrentTargetMarker" type="MeshInstance3D" parent="ViewContainer"]
unique_name_in_owner = true
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, -10.2)
top_level = true
visible = false
mesh = SubResource("SphereMesh_60utp")

[node name="RobotModel" parent="." instance=ExtResource("2_mqj5b")]

[node name="Skeleton3D" parent="RobotModel/Armature" index="0"]
bones/0/position = Vector3(0.0105481, 0.988186, -1.49517e-07)
bones/0/rotation = Quaternion(-0.00668624, 0, -1.48464e-18, 0.999978)
bones/1/rotation = Quaternion(0.99932, -0.011218, 0.00233965, -0.0350499)
bones/2/rotation = Quaternion(2.17987e-05, -0.00294591, 0.00294582, 0.999991)
bones/4/rotation = Quaternion(0.708448, -0.0242927, -0.705016, 0.0215493)
bones/5/rotation = Quaternion(-0.00339617, 0.00243593, -0.0716711, 0.99742)
bones/6/rotation = Quaternion(0, 0, 0, 1)
bones/7/rotation = Quaternion(0.718505, -0.00796547, 0.694422, -0.0382955)
bones/8/rotation = Quaternion(-0.000215031, 0.0016823, -0.0566555, 0.998392)
bones/9/rotation = Quaternion(0.997782, -0.000331685, -0.00216008, 0.0665381)
bones/10/rotation = Quaternion(2.17987e-05, 0.00294591, -0.00294582, 0.999991)
bones/12/position = Vector3(-0.180273, -0.188735, 0.0875239)
bones/12/rotation = Quaternion(0.724128, 0, 0, 0.689666)
bones/13/position = Vector3(-0.174301, 0.481262, -0.613786)
bones/13/rotation = Quaternion(-0.70072, 0, 0, 0.713436)
bones/14/position = Vector3(0.226016, -0.284424, -0.062501)
bones/14/rotation = Quaternion(0.724128, 0, 0, 0.689666)
bones/15/position = Vector3(0.174301, 0.481262, -0.613786)
bones/15/rotation = Quaternion(-0.70072, 0, 0, 0.713436)

[node name="OmniLight3D" type="OmniLight3D" parent="RobotModel/Armature/Skeleton3D/Cube" index="0"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.19466, -0.996917)
light_color = Color(0.890196, 0.784314, 0.321569, 1)
light_size = 1.0
omni_range = 3.0
omni_attenuation = 0.225313

[node name="GrappleSkeletonIk3D" type="SkeletonIK3D" parent="RobotModel/Armature/Skeleton3D" index="12"]
unique_name_in_owner = true
process_priority = 1
root_bone = &"UpperArm.L"
tip_bone = &"Hand.L"
override_tip_basis = false
target_node = NodePath("../../../../GrappleMarker")

[node name="TargetSkeletonIk3D" type="SkeletonIK3D" parent="RobotModel/Armature/Skeleton3D" index="13"]
unique_name_in_owner = true
process_priority = 1
root_bone = &"UpperArm.R"
tip_bone = &"Hand.R"
target_node = NodePath("../../../../TargetMarker")

[node name="RifleTriggerSkeletonIk3D" type="SkeletonIK3D" parent="RobotModel/Armature/Skeleton3D" index="14"]
unique_name_in_owner = true
process_priority = 1
root_bone = &"UpperArm.R"
tip_bone = &"Hand.R"
use_magnet = true
magnet = Vector3(5, 0, 0)
target_node = NodePath("../RightShoulderArmBoneAttachment3D/ShoulderedRiflePivot/ShoulderedRifleContainer/Rifle/TriggerTarget")

[node name="RifleStabilizingSkeletonIk3D" type="SkeletonIK3D" parent="RobotModel/Armature/Skeleton3D" index="15"]
unique_name_in_owner = true
process_priority = 1
root_bone = &"UpperArm.L"
tip_bone = &"Hand.L"
target_node = NodePath("../RightShoulderArmBoneAttachment3D/ShoulderedRiflePivot/ShoulderedRifleContainer/Rifle/StabilizingTarget")

[node name="ColliderBoneAttachment3D" type="BoneAttachment3D" parent="RobotModel/Armature/Skeleton3D" index="16" node_paths=PackedStringArray("collision_shape")]
transform = Transform3D(1, 2.96921e-18, 1.98533e-20, -2.96921e-18, 0.999911, 0.0133722, 1.98533e-20, -0.0133722, 0.999911, 0.0105481, 0.988186, -1.49517e-07)
bone_name = "Torso"
bone_idx = 0
script = ExtResource("4_r4pv6")
collision_shape = NodePath("../../../../PlayerCollisionShape3D")

[node name="CameraBoneAttachment3D" type="BoneAttachment3D" parent="RobotModel/Armature/Skeleton3D" index="17"]
transform = Transform3D(1, 2.96921e-18, 1.98533e-20, -2.96921e-18, 0.999911, 0.0133722, 1.98533e-20, -0.0133722, 0.999911, 0.0105481, 1.58813, -0.00802346)
bone_name = "Neck"
bone_idx = 6

[node name="CameraPosition" type="Marker3D" parent="RobotModel/Armature/Skeleton3D/CameraBoneAttachment3D"]
unique_name_in_owner = true
transform = Transform3D(1, -2.74375e-22, -3.30872e-24, -1.58511e-23, 1, 0, -2.48154e-24, 0, 1, 0, 0.291683, -0.274032)

[node name="RightHandBoneAttachment3D" type="BoneAttachment3D" parent="RobotModel/Armature/Skeleton3D" index="18"]
transform = Transform3D(0.999986, -0.00500837, 0.00153699, -0.00473014, -0.989263, -0.146074, 0.00225208, 0.146065, -0.989272, 0.47243, 0.683529, 0.109886)
bone_name = "Hand.R"
bone_idx = 11

[node name="RightHandMarker" type="Marker3D" parent="RobotModel/Armature/Skeleton3D/RightHandBoneAttachment3D"]
unique_name_in_owner = true
transform = Transform3D(1, -8.73115e-10, -2.32831e-10, -1.57161e-09, 1, -4.47035e-08, 2.32831e-10, 4.47035e-08, 1, 0.000631809, 0.132126, 0.0195097)

[node name="RocketLauncher" parent="RobotModel/Armature/Skeleton3D/RightHandBoneAttachment3D" instance=ExtResource("4_81pnj")]
unique_name_in_owner = true
transform = Transform3D(1, 0, -2.21489e-14, 3.2517e-14, -4.37114e-08, -1, 0, 1, -4.37115e-08, -0.00428125, 0.383502, 0.098472)
visible = false

[node name="OneHandedRifleContainer" type="Node3D" parent="RobotModel/Armature/Skeleton3D/RightHandBoneAttachment3D"]
unique_name_in_owner = true
transform = Transform3D(1, 7.21775e-09, -1.15415e-09, -2.59752e-09, -2.98023e-08, -1, 3.84171e-09, 1, -1.58325e-08, -0.00276437, 0.232786, 0.0967272)

[node name="LeftHandBoneAttachment3D" type="BoneAttachment3D" parent="RobotModel/Armature/Skeleton3D" index="19"]
transform = Transform3D(0.999845, -0.0176238, -0.000428859, -0.017571, -0.998235, 0.0567363, -0.00142801, -0.05672, -0.998389, -0.490465, 0.676529, -0.0517288)
bone_name = "Hand.L"
bone_idx = 3

[node name="GrappleSource" type="Marker3D" parent="RobotModel/Armature/Skeleton3D/LeftHandBoneAttachment3D"]
unique_name_in_owner = true
transform = Transform3D(0.999917, 0.0125164, 0.0030093, -0.0127627, 0.99442, 0.104716, -0.00168184, -0.104746, 0.994499, -0.0136507, 0.141837, 0.0449862)

[node name="RightShoulderArmBoneAttachment3D" type="BoneAttachment3D" parent="RobotModel/Armature/Skeleton3D" index="20"]
transform = Transform3D(1, 2.96921e-18, 1.98533e-20, -2.96921e-18, 0.999911, 0.0133722, 1.98533e-20, -0.0133722, 0.999911, 0.0105481, 0.988186, -1.49517e-07)
bone_name = "Torso"
bone_idx = 0

[node name="ShoulderedRiflePivot" type="Node3D" parent="RobotModel/Armature/Skeleton3D/RightShoulderArmBoneAttachment3D"]
unique_name_in_owner = true
transform = Transform3D(1, 2.49861e-25, 4.96308e-23, 2.49936e-25, 1, 0, 0, 0, 1, 0.307179, 0.554231, -0.03301)

[node name="ShoulderedRifleContainer" type="Node3D" parent="RobotModel/Armature/Skeleton3D/RightShoulderArmBoneAttachment3D/ShoulderedRiflePivot"]
unique_name_in_owner = true
transform = Transform3D(1, 1.73938e-24, 3.28287e-24, 2.48674e-25, 1, 0, 0, 0, 1, -0.0190802, 0.0558872, -0.398936)

[node name="Rifle" parent="RobotModel/Armature/Skeleton3D/RightShoulderArmBoneAttachment3D/ShoulderedRiflePivot/ShoulderedRifleContainer" instance=ExtResource("6_ak4qe")]
unique_name_in_owner = true
transform = Transform3D(1, 0, 0, 0, 0.999999, 0, 0, 0, 1, 0, 0, 0)

[node name="TriggerTarget" type="Marker3D" parent="RobotModel/Armature/Skeleton3D/RightShoulderArmBoneAttachment3D/ShoulderedRiflePivot/ShoulderedRifleContainer/Rifle"]
unique_name_in_owner = true
transform = Transform3D(0.999234, -0.0390586, 0.00241042, 0.00316248, 0.141991, 0.989863, -0.0390049, -0.989099, 0.142006, 0.024784, -0.126692, 0.246077)

[node name="StabilizingTarget" type="Marker3D" parent="RobotModel/Armature/Skeleton3D/RightShoulderArmBoneAttachment3D/ShoulderedRiflePivot/ShoulderedRifleContainer/Rifle"]
unique_name_in_owner = true
transform = Transform3D(0.755071, 0.0367967, -0.65461, 0.368416, 0.802079, 0.470044, 0.542343, -0.596087, 0.59207, -0.138143, -0.124343, -0.0820923)

[node name="AnimationTree" type="AnimationTree" parent="."]
unique_name_in_owner = true
tree_root = SubResource("AnimationNodeBlendTree_erxgy")
anim_player = NodePath("../RobotModel/AnimationPlayer")
parameters/FallSwingSpace/blend_position = Vector2(0.610247, 0.498413)
parameters/InAirBlend/blend_amount = 0.0
parameters/RunBlend/blend_amount = 0.0

[node name="PlayerCollisionShape3D" type="CollisionShape3D" parent="."]
transform = Transform3D(0.719433, 0, 0, 0, 1, 0, 0, 0, 0.746609, 0, 0.999772, 0)
shape = SubResource("CapsuleShape3D_6m3mm")

[node name="TargetMarker" type="Marker3D" parent="."]
unique_name_in_owner = true
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.407661, 2.14551, -1.99516)
top_level = true

[node name="GrappleMarker" type="Marker3D" parent="."]
unique_name_in_owner = true
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.915858, 3.05856, -0.724926)

[node name="RopeTemplate" type="Node3D" parent="."]
unique_name_in_owner = true
visible = false

[node name="RopeMesh" type="MeshInstance3D" parent="RopeTemplate"]
transform = Transform3D(1, 0, 0, 0, -4.37114e-08, -1, 0, 1, -4.37114e-08, 0, 0, 0)
material_override = SubResource("StandardMaterial3D_81u2g")
mesh = SubResource("CylinderMesh_t43tk")
skeleton = NodePath("../..")

[node name="GrappleSuccessSound" type="AudioStreamPlayer3D" parent="."]
unique_name_in_owner = true
transform = Transform3D(0.999979, 0.00626207, -0.0014637, 0.00595414, -0.98755, -0.157195, -0.00242984, 0.157183, -0.987567, -0.563249, 1.51646, -0.407361)
stream = ExtResource("9_yysj1")
bus = &"InWorldSound"

[node name="ThrustSound" type="AudioStreamPlayer3D" parent="."]
unique_name_in_owner = true
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.879673, 0.703183)
stream = ExtResource("10_bh5eh")
volume_db = -15.0
bus = &"InWorldSound"

[node name="WindSound" type="AudioStreamPlayer" parent="."]
unique_name_in_owner = true
stream = ExtResource("10_1kjdc")
volume_db = -80.0
autoplay = true
bus = &"InWorldSound"

[node name="FreezeSound" type="AudioStreamPlayer" parent="."]
unique_name_in_owner = true
stream = ExtResource("12_tgrls")
volume_db = -5.0

[node name="RopeSegments" type="Node" parent="."]
unique_name_in_owner = true

[node name="Timers" type="Node" parent="."]

[node name="FreezeTimer" type="Timer" parent="Timers"]
unique_name_in_owner = true
wait_time = 2.5
one_shot = true

[node name="FreezeRechargeTimer" type="Timer" parent="Timers"]
unique_name_in_owner = true
wait_time = 8.0
one_shot = true

[node name="ThrustRechargeTimer" type="Timer" parent="Timers"]
unique_name_in_owner = true
wait_time = 5.0
autostart = true

[connection signal="ammo_change" from="RobotModel/Armature/Skeleton3D/RightHandBoneAttachment3D/RocketLauncher" to="." method="_on_rocket_launcher_ammo_change"]
[connection signal="ammo_change" from="RobotModel/Armature/Skeleton3D/RightShoulderArmBoneAttachment3D/ShoulderedRiflePivot/ShoulderedRifleContainer/Rifle" to="." method="_on_rifle_ammo_change"]
[connection signal="timeout" from="Timers/FreezeTimer" to="." method="_on_freeze_timer_timeout"]
[connection signal="timeout" from="Timers/FreezeRechargeTimer" to="." method="_on_freeze_recharge_timer_timeout"]
[connection signal="timeout" from="Timers/ThrustRechargeTimer" to="." method="_on_thrust_recharge_timer_timeout"]

[editable path="RobotModel"]
